--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             src="images/vacation-rental-inside-stone.png"
             alt="Thinkfulbnb - Vacation rental inside stone"
           />
-
           <p>
             Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
             fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
@@ -90,19 +89,37 @@
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
-
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <h3>Forest retreats</h3>
+              <img
+                src="images/forest-retreat.png"
+                alt="Thinkfulbnb - Forest retreat"
+              />
+            </div>
+            <div class="column">
+              <h3>Beaches</h3>
+              <img
+                src="images/beach-house.png"
+                alt="Thinkfulbnb - Beach house"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <h3>Rustic cabins</h3>
+              <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            </div>
+            <div class="column">
+              <h3>Pet-friendly</h3>
+              <img
+                src="images/pet-friendly.png"
+                alt="Thinkfulbnb - Pet-friendly"
+              />
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Host -->
